--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,12 @@ body {
   @apply bg-white text-black dark:bg-black dark:text-white transition-colors duration-150;
 }
 
+input,
+textarea,
+select {
+  @apply text-black dark:text-black;
+}
+
 @media print {
   body {
     @apply bg-white text-black;
